crates/check_service/src/snapshots/cant_read_directory.snap
---
source: crates/check_service/src/diagnostics.rs
expression: content
---
example/ internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Check couldn't read the following directory, maybe for permissions reasons or it doesn't exist: example/
