crates/check_service/src/snapshots/cant_read_file.snap
---
source: crates/check_service/src/diagnostics.rs
expression: content
---
example.js internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Check couldn't read the following file, maybe for permissions reasons or it doesn't exist: example.js
