crates/check_service/src/snapshots/dirty_workspace.snap
---
source: crates/check_service/src/diagnostics.rs
expression: content
---
internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Uncommitted changes in repository
