crates/check_service/src/snapshots/non_utf8_path.snap
---
source: crates/check_service/src/diagnostics.rs
expression: content
---
path.js internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Check does not support non-UTF8 characters in path: path.js
