crates/check_service/src/snapshots/source_file_not_supported.snap
---
source: crates/check_service/src/diagnostics.rs
expression: content
---
not_supported.toml files/missingHandler ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Check could not determine the language for the file extension toml
  
  Verbose advice
  
    i If you want to turn off this diagnostic, consider using --files-ignore-unknown from the CLI, or files.ignoreUnknown from the configuration file.
    


