crates/check_service/src/snapshots/transport_rpc_error.snap
---
source: crates/check_service/src/diagnostics.rs
expression: content
---
internalError/io  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some generic error
  
  ! This diagnostic was derived from an internal Check error. Potential bug, please report it if necessary.
  


